# qa-auto-engineer-python-project-241

./: Makefile  README.md  pyproject.toml  test.py
.github/workflows/: my_pipeline.yml  pyci.yml
files/: file1.yml  file2.yml
gendiff/: __init__.py
gendiff/formatter/: json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  parser.py
tests/: test_argumets_parser.py  test_deafault.py  test_json.py  test_yml.py
tests/test_data/: path.py  result_string.py
