[project]
name = "hexlet-code"
version = "0.1.0"
description = "Test project with files"
authors = [
	{name = "Коваль Виктор", email = "yan1992@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] 
packages = ["gendiff"] 

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[project.scripts] 
gendiff = "gendiff.scripts.gendiff:main"
